<resources>
    <string name="app_name">LicentaAPK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="internal_storage">Internal storage</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="welcome">Welcome</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Wrong email or password.</string>
    <string name="error_email_required">Please enter your email</string>
    <string name="error_password_required">Please enter your password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_successful">Login Successful</string>
    <string name="register_text_link">No account yet? Register now</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Strings related to register -->
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="register_successful">Register successful</string>
    <string name="error_password_match">Passwords do no match</string>
    <string name="error_location">Please pick a location</string>
    <string name="error_phone_number">Please enter a valid phone number</string>
    <string name="error_name">Please enter a valid name</string>
    <string name="first_name">First Name</string>
    <string name="register_button">Register</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="account_info">Account Info</string>
    <string name="personal_info">Personal Info</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Pick Location</string>
    <string name="location_confirm">Confirm</string>
    <string name="provide_location">Please provide a location</string>
    <string name="provide_valid_location">Please provide a valid location</string>

    <!-- Strings related to Adverts -->
    <string-array name="currency_values">
        <item>lei</item>
        <item>$</item>
        <item>€</item>
    </string-array>

    <string-array name="condition_values">
        <item>New</item>
        <item>Used</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

