<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cti.fmi.licentaapk.activities.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/colorSecondary">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_top_bottom"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_account_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_info"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryDarker"
                android:layout_marginTop="@dimen/login_margin_top_bottom"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/login_margin_left_right" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right"
                android:layout_marginTop="@dimen/login_margin_top_bottom" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right" />

            <EditText
                android:id="@+id/register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_confirm"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right" />

            <TextView
                android:id="@+id/register_personal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info"
                android:textSize="20sp"
                android:textColor="@color/colorSecondaryDarker"
                android:layout_marginTop="@dimen/login_margin_top_bottom"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/login_margin_left_right" />

            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:layout_marginTop="@dimen/login_margin_top_bottom"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right" />

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right" />

            <EditText
                android:id="@+id/register_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right" />

            <EditText
                android:id="@+id/register_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right"
                android:drawableEnd="@drawable/register_location_icon"
                android:focusableInTouchMode="false"/>

            <Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_button_left_right"
                android:layout_marginLeft="@dimen/login_button_left_right"
                android:layout_marginRight="@dimen/login_button_left_right"
                android:layout_marginEnd="@dimen/login_button_left_right"
                android:layout_marginTop="@dimen/login_margin_left_right"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/register_button"
                android:background="@drawable/button_shape"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryDarker"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
