<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorSecondary"
    tools:context="com.cti.fmi.licentaapk.activities.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textColor="@color/colorSecondaryDarker"
                android:layout_marginTop="@dimen/login_margin_top_bottom" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right"
                android:layout_marginTop="@dimen/login_margin_top_bottom">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_margin_left_right"
                android:layout_marginLeft="@dimen/login_margin_left_right"
                android:layout_marginRight="@dimen/login_margin_left_right"
                android:layout_marginEnd="@dimen/login_margin_left_right">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_button_left_right"
                android:layout_marginLeft="@dimen/login_button_left_right"
                android:layout_marginRight="@dimen/login_button_left_right"
                android:layout_marginEnd="@dimen/login_button_left_right"
                android:layout_marginTop="@dimen/login_margin_left_right"
                android:text="@string/action_login"
                android:background="@drawable/button_shape"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryDarker"
                />

            <TextView android:id="@+id/forgotPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/forgot_password"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorTextLink"
                />

            <TextView android:id="@+id/registerLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_margin_top_bottom"
                android:text="@string/register_text_link"
                android:gravity="center"
                android:textSize="12sp"
                android:linksClickable="true"
                android:textColor="@color/colorTextLink"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
